--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Paamlab2">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -18,10 +19,15 @@
             android:theme="@style/Theme.Paamlab2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ComposeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Paamlab2" />
+
     </application>
 
 </manifest>
